# nlp100-python-roo

./: .clinerules  README.md  pyproject.toml
src/nlp100/: __init__.py
src/nlp100/ch01/: __init__.py  q00.py  q01.py  q02.py  q03.py  q04.py
src/nlp100/ch02/: __init__.py
src/nlp100/ch03/: __init__.py
src/nlp100/ch04/: __init__.py
src/nlp100/ch05/: __init__.py
src/nlp100/ch06/: __init__.py
src/nlp100/ch07/: __init__.py
src/nlp100/ch08/: __init__.py
src/nlp100/ch09/: __init__.py
src/nlp100/ch10/: __init__.py
tests/: __init__.py  test_ch01.py
tests/ch01/: __init__.py  test_q00.py  test_q01.py  test_q02.py  test_q03.py  test_q04.py
