[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlp100-python-roo"
version = "0.1.0"
description = "Pythonで言語処理100本ノックを解くプロジェクト"
readme = "README.md"
requires-python = ">=3.13.1"
license = { file = "LICENSE" }
authors = [
    { name = "okayu" }
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nlp100"]